--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "mobx": "^3.1.11",
+    "pixi.js": "^4.5.2",
     "react": "^15.3.2",
     "react-addons-perf": "^15.3.2",
     "react-async-script": "^0.9.1",
