--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run copy && npm run style && npm run dev",
+    "test": "npm run copy && npm run style && node scripts/dev.js test",
     "copy": "node scripts/copy.js",
     "dev": "node scripts/dev.js",
     "style": "node scripts/style.js"
@@ -23,7 +24,8 @@
     "react-router": "^2.1.1",
     "react-router-redux": "^4.0.2",
     "react-svg-inline": "^1.2.0",
-    "react-transition-group-plus": "^0.4.2"
+    "react-transition-group-plus": "^0.4.2",
+    "stats.js": "^0.17.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.2.3",
